packages/next-swc/crates/core/tests/errors/server-actions/2/output.js
/* __next_internal_action_entry_do_not_use__ bar */ 'use strict';
export function bar() {}
bar.$$typeof = Symbol.for("react.server.reference");
bar.$$filepath = "/app/item.js";
bar.$$name = "bar";
bar.$$bound = [];